--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,29 @@
-<div> 
-   <form [formGroup] = "formdata" (ngSubmit) = "onClickSubmit(formdata.value)"> 
-      <input type = "text" class = "fortextbox" name = "emailid" 
-         placeholder = "emailid" formControlName = "emailid"> 
-      <br/> 
+<h1> welcome to {{name}} </h1>
+
+<span [innerHTML]="name"></span>
+
+
+<h2> attribute example</h2>
+
+<table border="1" height="200" width="400">
+  <tr>
+    <td [attr.colspan]="cols">Students Details</td>
     
-      <input type = "password" class = "fortextbox" name = "passwd" 
-         placeholder = "passwd" formControlName = "passwd">
-      <br/> 
-      
-      <input type = "submit" [disabled] = "!formdata.valid" class = "forsubmit" 
-         value = "Log In"> 
-   </form> 
-</div>
-<p> Email entered is : {{emailid}} </p>
-<div> 
-   <button (click) = "animate()">Click Me</button> 
-   <div [@myanimation] = "state" class = "rotate"> 
-      <img src = "assets/images/img.png" width = "100" height = "100">
-   </div> 
-</div>
+ </tr>
+
+
+  <tr>
+    <td>ID</td>
+    <td>Names</td>
+    <td>Class</td>
+ </tr>
+   
+
+
+    <tr>
+    <td>001</td>
+    <td>Ajeet Kumar</td>
+    <td>10th</td>
+ </tr>
+      </table>
+ 
